# 202520529266

./: .gitignore  README.md  adder_8h.html  adder_8h_source.html  git-cheat-sheet.txt  hianddate.cmd  index.html
.github/workflows/: doxygen-deploy.yml
worksheet3/: hello.cpp
worksheet3/adder_static/include/: adder.h
worksheet3/adder_static/lib/: libadder.lib
worksheet4/calc/: adder.h  cmakelists.txt
worksheet4/calc/build_dynamic/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  calc.sln  calc.vcxproj  calc.vcxproj.filters  cmake_install.cmake  maths.vcxproj  maths.vcxproj.filters
worksheet4/hello_cmake/: cmakelists.txt
worksheet5/: adder.cpp  adder.h  calc.cpp  cmakelists.txt
worksheet5/latex/: adder_8h.tex  adder_8h_source.tex
worksheet6/exercise1/: CMakeLists.txt  ModelPart.cpp  ModelPart.h  ModelPartList.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  optiondialog.cpp  optiondialog.h  optiondialog.ui
worksheet6/exercise1_build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  exercise1.sln  exercise1.vcxproj  exercise1.vcxproj.filters
worksheet6/exercise1_build/.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake  QtDeployTargets-Debug.cmake  QtDeployTargets-MinSizeRel.cmake  QtDeployTargets-RelWithDebInfo.cmake  QtDeployTargets-Release.cmake
worksheet6/exercise1_build/exercise1_autogen/include_Debug/: ui_mainwindow.h
worksheet6/exercise1_build/exercise1_autogen/include_Debug/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
worksheet7/exercise3/: CMakeLists.txt  ModelPart.cpp  ModelPart.h  icons.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui  optiondialog.ui
worksheet7/exercise3/test stl files/: LICENSE.txt  README.txt
